@@ -16,7 +16,7 @@ INSERT INTO tabela_usuarios (email, senha, tipo)
 VALUES ('paciente@vt.com', '123', 'paciente');
 
 /*Tabela de cada médico*/
-CREATE TABLE `tabela_horarios$email_medico` (
+CREATE TABLE `tabela_horarios_$email_medico` (
     horario datetime NOT NULL UNIQUE,
     email_paciente varchar(255) NOT NULL,
     FOREIGN KEY (email_paciente) REFERENCES tabela_usuarios(email),
