@@ -1,10 +1,10 @@
 body {
-    background-color: rgb(0, 29, 54);
+    background-color: rgb(15, 15, 15);
     color: aliceblue;
 }
 a:link {
-    color: chocolate;
+    color: #ff4f84;
 }
 a:visited {
-    color: chocolate;
+    color: #ff4f84;
 }
